[package]
name = "realpath"
version = "1.0.0"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
edition = "2018"
description = "Path resolver library and utilities"
repository = "https://git.dragonma.us/dragonmaus/realpath.rs"
license = "BSD-3-Clause-Clear"
categories = ["command-line-utilities"]
publish = false

[dependencies]
getopt = "1.0"
program = { git = "https://git.dragonma.us/dragonmaus/program.rs", version = "1.0" }
