[package]
name = "realpath"
version = "1.0.0"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
edition = "2018"
description = "Path resolver library and utilities"
repository = "https://git.dragonma.us/rust/realpath"
license = "BSD-3-Clause-Clear"
categories = ["command-line-utilities"]
publish = false

[dependencies]
getopt = "1"
program = { git = "git://git.dragonma.us/rust/program" }
